external-crates/move/crates/move-compiler/tests/move_2024/parser/labeled_control_exp_associativity_else_after_if_block.exp
error[E04007]: incompatible types
   ┌─ tests/move_2024/parser/labeled_control_exp_associativity_else_after_if_block.move:13:9
   │
13 │         if (cond) 'a: { s1 }.f else s2.f
   │         ^^^^^^^^^^^^^^^^^^^^
   │         │         │
   │         │         Found: '0x42::M::S'. It is not compatible with the other type.
   │         Incompatible branches
   │         Found: '()'. It is not compatible with the other type.

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/labeled_control_exp_associativity_else_after_if_block.move:13:32
   │
13 │         if (cond) 'a: { s1 }.f else s2.f
   │                                ^^^^
   │                                │
   │                                Unexpected 'else'
   │                                Expected ';'

